--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <a href="#" class="btn btn-light">Signup</a>
         </nav>
     </header>
-    <div id="heroBox">
-
+    <div id="heroBox" class="d-flex align-items-center justify-content-center">
+        <h1>Hero Box</h1>
     </div>
     <footer class="text-light footer position-absolute bg-dark d-flex justify-content-center align-items-center" style="bottom: 0;">
         All Rights Reserved | TeamName | Copyright &copy; 2020
