Added Mid section

--- a/index.html
+++ b/index.html
@@ -26,6 +26,29 @@
     <div id="heroBox" class="d-flex align-items-center justify-content-center">
         <h1>Hero Box</h1>
     </div>
+
+    <!-- Mid Section Starts -->
+    <div class="container" id = "midSection">
+        <div class="row">
+            <div class="column" id="imageColumn1">
+                <img src="images/a.jpg" alt="">
+                <button class="btn btn-primary">Add Notes</button>
+
+            </div
+            ><div class="column column1" id="imageColumn2">
+                <img src="images/828527.jpg" alt="">
+                <button class="btn btn-primary">Mark Attendance</button>
+
+            </div>
+            <div class="column column1" id="imageColumn3">
+                <img src="images/a.png" alt="">
+                <button class="btn btn-primary">See Assignment</button>
+            </div>
+        </div>
+    </div>
+    <!-- Mid Section Ends -->
+
+
     <footer class="text-light footer position-absolute bg-dark d-flex justify-content-center align-items-center" style="bottom: 0;">
         All Rights Reserved | TeamName | Copyright &copy; 2020
     </footer>
