--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
     </div>
 
     <!-- Mid Section Starts -->
-    <div class="container" id = "midSection">
+    <div id = "midSection">
         <div class="row">
             <div class="column" id="imageColumn1">
                 <img src="images/a.jpg" alt="">
                 <button class="btn btn-primary">Add Notes</button>
 
-            </div
-            ><div class="column column1" id="imageColumn2">
+            </div>
+            <div class="column column1" id="imageColumn2">
                 <img src="images/828527.jpg" alt="">
                 <button class="btn btn-primary">Mark Attendance</button>
 
@@ -49,7 +49,7 @@
     <!-- Mid Section Ends -->
 
 
-    <footer class="text-light footer position-absolute bg-dark d-flex justify-content-center align-items-center" style="bottom: 0;">
+    <footer class="text-light footer bg-dark d-flex justify-content-center align-items-center">
         All Rights Reserved | TeamName | Copyright &copy; 2020
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
