--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AMS</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="styleIndex.css">
+    <link rel="stylesheet" href="CSS/styleIndex.css">
+    <link rel="stylesheet" href="CSS/headerfooter.css">
 </head>
 <body>
     <header class="bg-dark d-flex align-items-center justify-content-between header">
@@ -19,8 +20,8 @@
         </div>
         <nav class="navbar navbar-expand">
             <a href="#" class="btn btn-light">About Us</a>
-            <a href="#" class="btn btn-light">Login</a>
-            <a href="#" class="btn btn-light">Signup</a>
+            <a href="HTML/login.html" class="btn btn-light">Login</a>
+            <a href="HTML/signup.html" class="btn btn-light">Signup</a>
         </nav>
     </header>
     <div id="heroBox" class="d-flex align-items-center justify-content-center">
