CSS linking changed

--- a/HTML/signup.html
+++ b/HTML/signup.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AMS | Login</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="/CSS/headerfooter.css">
-    <link rel="stylesheet" href="/CSS/styleLoginSignup.css">
+    <link rel="stylesheet" href="../CSS/headerfooter.css">
+    <link rel="stylesheet" href="../CSS/styleLoginSignup.css">
 </head>
 <body>
     <header class="bg-dark d-flex align-items-center justify-content-between header">
         <div class="webname text-light d-flex">
             <div id="siteLogo">
-                <img src="/Images/siteLogo.png" alt="">
+                <img src="../Images/siteLogo.png" alt="">
             </div>
             <div id="siteName" class="d-flex">
                 <a href="index.html">Attendance Marker</a>
