--- a/HTML/signup.html
+++ b/HTML/signup.html
@@ -15,7 +15,7 @@
                 <img src="../Images/siteLogo.png" alt="">
             </div>
             <div id="siteName" class="d-flex">
-                <a href="index.html">Attendance Marker</a>
+                <a href="../index.html">Attendance Marker</a>
             </div>
         </div>
         <nav class="navbar navbar-expand">
